Edited some text files

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <main>
         <section>
             <h2>About Our Company</h2>
-            <p>Information about the company, its history, mission, etc.</p>
+            <p>Our company was founded on January 26th 2024 at around 9:10am. Our purpose is to serve our customers and provide quality web development services in a timely manner.</p>
         </section>
     </main>
 
