--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section>
             <h2>Welcome!</h2>
-            <p>Welcome to our website. We specialize in web development services...</p>
+            <p>Welcome to our website. We specialize in web development services, delivering quality results in a very litte amount of time!</p>
         </section>
     </main>
 
