--- a/services.html
+++ b/services.html
@@ -21,10 +21,9 @@
             <h2>Web Development Services</h2>
             <p>
 				<ul>
-					<li>Provide details about your services.</li>
-					<li>One service your offer is the development of websites that meet current accessibility standards. 
-					Note: This template doesn't demonstrate best practices.</li>
-					<li>Offer at least one more service of your choosing. Look at web devs online to get a sense of things.</li>
+					<li>We have created many professional websites used in a myriad of industries. Respresent your company with Git Bash'd!</li>
+					<li>We offer the development of websites that meet current accessibility standards per WCAG 2.2.</li>
+					<li>In our portfolio, you will find web apps for efficient management of different business activities. We apply smart automation to streamline workflows and integrate corporate apps together for coherent operation.</li>
 				</ul>
 			</p>
         </section>
