--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
+		<img src="https://mail.google.com/mail/u/2?ui=2&ik=7b33fdc905&attid=0.1&permmsgid=msg-a:r5399809881094556524&th=18d4671c32540965&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ9FsqkNzjhoQ3Xr49H0EN5zHSNs9JlLIAE6Mx2PvMGcaAsWme_fElYYCSOSEDS_Nilm5AIadO3T-7pJsfpn6UilJ6gH8-wwqAqo5l53_ZXvUfJdCzZCHrPEces&disp=emb&realattid=18d4671ba8d228d095f1">
             </ul>
         </nav>
     </header>
@@ -19,7 +20,7 @@
     <main>
         <section>
             <h2>About Our Company</h2>
-            <p>Information about the company, its history, mission, etc.</p>
+            <p>We are Git Bash'd. Our names are Logan, Ethan and Joel. .</p>
         </section>
     </main>
 
