Made the file path more readable.

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <section>
             <h2>About Our Company</h2
             <p>We are Git Bash'd. Our names are Logan, Ethan and Joel. Our company was founded on January 26th 2024 at around 9:10am. Our purpose is to serve our customers and provide quality web development services in a timely manner.</p>
-	    <img class="image" src="https://mail.google.com/mail/u/2?ui=2&ik=7b33fdc905&attid=0.1&permmsgid=msg-a:r5399809881094556524&th=18d4671c32540965&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ9FsqkNzjhoQ3Xr49H0EN5zHSNs9JlLIAE6Mx2PvMGcaAsWme_fElYYCSOSEDS_Nilm5AIadO3T-7pJsfpn6UilJ6gH8-wwqAqo5l53_ZXvUfJdCzZCHrPEces&disp=emb&realattid=18d4671ba8d228d095f1">
+	    <img class="image" alt="Group hard at work." src=""C:\Users\DullP\cs253_company_page\images\GroupImage.jpg">
 	    <img class="image" alt="man working on computer" src="images/manworking.jpg">        
 	</section>       
     </main>
