re did that last step.

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <section>
             <h2>About Our Company</h2
             <p>We are Git Bash'd. Our names are Logan, Ethan and Joel. Our company was founded on January 26th 2024 at around 9:10am. Our purpose is to serve our customers and provide quality web development services in a timely manner.</p>
-	    <img class="image" alt="Group hard at work." src=""C:\Users\DullP\cs253_company_page\images\GroupImage.jpg">
+	    <img class="image" alt="Group hard at work." src="images/GroupImage.jpg">
 	    <img class="image" alt="man working on computer" src="images/manworking.jpg">        
 	</section>       
     </main>
