--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                       <li>Customer-Centric Approach: Your satisfaction is our priority. We pride ourselves on delivering projects on time and within budget, while maintaining open communication throughout the process.</li>
                  </ul>
             </p>
-            <p>Feel free to explore our portfolio, read about our success stories, and get a glimpse of the unparalleled quality we bring to every project. Whether you're in need of a sleek corporate website, a robust e-commerce platform, or a visually stunning portfolio, [Your Company Name] is your one-stop destination for all your web development needs. Thank you for considering Git Bash'd. We look forward to the opportunity of turning your digital dreams into reality!</p>
+            <p>Feel free to explore our portfolio, read about our success stories, and get a glimpse of the unparalleled quality we bring to every project. Whether you're in need of a sleek corporate website, a robust e-commerce platform, or a visually stunning portfolio, Git Bash'd is your one-stop destination for all your web development needs. Thank you for considering Git Bash'd. We look forward to the opportunity of turning your digital dreams into reality!</p>
         </section>
     </main>
 
