--- a/services.html
+++ b/services.html
@@ -25,7 +25,18 @@
 					<li>We offer the development of websites that meet current accessibility standards per WCAG 2.2.</li>
 					<li>In our portfolio, you will find web apps for efficient management of different business activities. We apply smart automation to streamline workflows and integrate corporate apps together for coherent operation.</li>
 				</ul>
-			</p>
+	    </p>
+	    <p>
+		Fill out the forms below and we will get back to you at our earliest convenience.
+   	    </p> 
+            <form>
+ 		<label for="fname">Full Name:</label><br>
+ 		<input type="text" id="fname" name="fname"><br>
+		<label for="lname">Email::</label><br>
+		<input type="text" id="email" name="email">
+		<label for="issue">Questions:</label><br>
+		<input type="text" id="questions" name="questions">
+	    </form>
         </section>
     </main>
 
