small header change

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
     <main>
         <section>
-            <h2>About Our Company</h2
+            <h2>About Our Company</h2>
             <h4>Ethan, Joel, and Logan - The Driving Force of Innovation</h4>
             <p>Welcome to Git Bash'd, where creativity, expertise, and passion converge to shape the digital future. Allow us to introduce the brilliant minds behind our journey - Ethan, Joel, and Logan, co-owners and visionaries who collectively bring a wealth of experience and a shared commitment to excellence in website development.</p>
 	    <h4>The Strategic Architect</h4>
