upated the forms.

--- a/services.html
+++ b/services.html
@@ -32,8 +32,8 @@
             <form>
  		<label for="fname">Full Name:</label><br>
  		<input type="text" id="fname" name="fname"><br>
-		<label for="lname">Email::</label><br>
-		<input type="text" id="email" name="email">
+		<label for="lname">Email:</label><br>
+		<input type="text" id="email" name="email"><br>
 		<label for="issue">Questions:</label><br>
 		<input type="text" id="questions" name="questions">
 	    </form>
