added heading to index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <h2>Welcome!</h2>
             <p>Thank you for stepping into the digital realm of Git Bash'd, where innovation meets excellence in website development! We're thrilled to have you explore the boundless possibilities that our skilled team of developers, designers, and visionaries bring to the table.</p>
 	    <p>At Git Bash'd, we understand the pivotal role a captivating and functional website plays in today's dynamic online landscape. Whether you're an ambitious startup, an established enterprise, or an individual with a unique vision, we are here to transform your ideas into a stunning and user-friendly digital experience.</p>
-            <p>Why Choose Git Bash'd?</p>
+            <p>
+                 <h4>Why Choose Git Bash'd?</h4>
+            </p>
             <p>
 	         <ul>
                       <li>Expertise: Our team boasts a wealth of experience and expertise in crafting websites that not only meet but exceed industry standards.</li>
