fancified the services page.

--- a/services.html
+++ b/services.html
@@ -19,23 +19,33 @@
     <main>
         <section>
             <h2>Web Development Services</h2>
-            <p>
-				<ul>
-					<li>We have created many professional websites used in a myriad of industries. Respresent your company with Git Bash'd!</li>
-					<li>We offer the development of websites that meet current accessibility standards per WCAG 2.2.</li>
-					<li>In our portfolio, you will find web apps for efficient management of different business activities. We apply smart automation to streamline workflows and integrate corporate apps together for coherent operation.</li>
-				</ul>
+	    <h4>Overview</h4>
+	    <p>
+		Welcome to Git Bash'd, where we take pride in delivering cutting-edge web development services tailored to meet the diverse needs of our clients. As a leading player in the industry, we offer a comprehensive range of services that span the entire web development spectrum. Our dedicated team of skilled professionals is committed to crafting robust and dynamic websites that not only elevate your online presence but also enhance user engagement and satisfaction.
+	    <h4>Accessibility</h4>
+	    <p>
+		At Git Bash'd, we understand the importance of inclusivity and accessibility in the digital landscape. That's why we go beyond the conventional boundaries to ensure that our web development services adhere to the highest standards of accessibility. We believe in creating websites that are not just visually stunning but also accessible to users of all abilities. Our team follows industry best practices and standards, such as WCAG (Web Content Accessibility Guidelines), to guarantee that your website is usable and enjoyable for everyone, regardless of disabilities or impairments.
 	    </p>
+	    <h4>Features & Advantages</h4>
+	    <p>
+		Whether you are looking for responsive web design, e-commerce solutions, custom web applications, or content management systems, we have the expertise to turn your vision into a reality. Our development process is characterized by a perfect blend of creativity, functionality, and scalability, ensuring that your website not only meets your current requirements but also has the flexibility to adapt to future changes.
+
+		At Git Bash'd, we thrive on innovation, and our commitment to staying abreast of the latest technologies ensures that we deliver state-of-the-art solutions. From the initial conceptualization to the final launch, we work closely with our clients to understand their unique goals and challenges, providing them with tailored solutions that set them apart in the digital landscape.
+
+		Partner with us at Git Bash'd for web development services that not only meet but exceed your expectations. With a focus on accessibility and inclusivity, we are dedicated to creating digital experiences that resonate with a diverse audience while elevating your brand to new heights.
+	    </p>
+	    <h4>Contact Us!</h4>
 	    <p>
 		Fill out the forms below and we will get back to you at our earliest convenience.
-   	    </p> 
+	    </p>
             <form>
  		<label for="fname">Full Name:</label><br>
  		<input type="text" id="fname" name="fname"><br>
 		<label for="lname">Email:</label><br>
 		<input type="text" id="email" name="email"><br>
 		<label for="issue">Questions:</label><br>
-		<input type="text" id="questions" name="questions">
+		<input type="text" id="questions" name="questions"><br>
+		<input type="submit"/>
 	    </form>
         </section>
     </main>
