--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Website Development Company</p>
+        <p>© 2024 Git Bash'd</p>
     </footer>
 </body>
 </html>
