--- a/index.html
+++ b/index.html
@@ -20,25 +20,21 @@
         <section>
             <h2>Welcome!</h2>
             <p>Thank you for stepping into the digital realm of Git Bash'd, where innovation meets excellence in website development! We're thrilled to have you explore the boundless possibilities that our skilled team of developers, designers, and visionaries bring to the table.</p>
-	    <p>At Git Bash'd, we understand the pivotal role a captivating and functional website plays in today's dynamic online landscape. Whether you're an ambitious startup, an established enterprise, or an individual with a unique vision, we are here to transform your ideas into a stunning and user-friendly digital experience.</p>
-            <p>
-                 <h4>Why Choose Git Bash'd?</h4>
-            </p>
-            <p>
+	        <p>At Git Bash'd, we understand the pivotal role a captivating and functional website plays in today's dynamic online landscape. Whether you're an ambitious startup, an established enterprise, or an individual with a unique vision, we are here to transform your ideas into a stunning and user-friendly digital experience.</p>
+            <h4>Why Choose Git Bash'd?</h4>
 	         <ul>
-                      <li>Expertise: Our team boasts a wealth of experience and expertise in crafting websites that not only meet but exceed industry standards.</li>
-                      <li>Innovation: We thrive on pushing the boundaries of creativity, utilizing the latest technologies to ensure your website stands out in the digital crowd.</li>
-                      <li>Collaboration: Your vision is our inspiration. We believe in collaborative partnerships, working closely with you to understand your goals and bring your ideas to life.</li>
-                      <li>Tailored Solutions: No two projects are the same. We tailor our solutions to suit your unique needs, ensuring a personalized and effective digital presence.</li>
-                      <li>Customer-Centric Approach: Your satisfaction is our priority. We pride ourselves on delivering projects on time and within budget, while maintaining open communication throughout the process.</li>
-                 </ul>
-            </p>
+                 <li>Expertise: Our team boasts a wealth of experience and expertise in crafting websites that not only meet but exceed industry standards.</li>
+                 <li>Innovation: We thrive on pushing the boundaries of creativity, utilizing the latest technologies to ensure your website stands out in the digital crowd.</li>
+                 <li>Collaboration: Your vision is our inspiration. We believe in collaborative partnerships, working closely with you to understand your goals and bring your ideas to life.</li>
+                 <li>Tailored Solutions: No two projects are the same. We tailor our solutions to suit your unique needs, ensuring a personalized and effective digital presence.</li>
+                 <li>Customer-Centric Approach: Your satisfaction is our priority. We pride ourselves on delivering projects on time and within budget, while maintaining open communication throughout the process.</li>
+             </ul>
             <p>Feel free to explore our portfolio, read about our success stories, and get a glimpse of the unparalleled quality we bring to every project. Whether you're in need of a sleek corporate website, a robust e-commerce platform, or a visually stunning portfolio, Git Bash'd is your one-stop destination for all your web development needs. Thank you for considering Git Bash'd. We look forward to the opportunity of turning your digital dreams into reality!</p>
         </section>
     </main>
 
     <footer>
-        <p>© 2024 Website Development Company</p>
+        <p>© 2024 Git Bash'd</p>
     </footer>
 </body>
 </html>
