--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Website Development Company</p>
+        <p>© 2024 Git Bash'd</p>
     </footer>
 </body>
 </html>
