Added a photo to merge

--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
 	    <p>Thank you for considering Git Bash'd. We look forward to the opportunity of turning your digital dreams into reality.</p>
 	    <img class="image" alt="Group hard at work." src="images/GroupImage.jpg">
 	    <img class="image" alt="man working on computer" src="images/manworking.jpg">        
+	    <img class="image" alt="Logan on the grind." src="https://cdn.discordapp.com/attachments/466311159176495116/1200596846771437698/IMG_1880.jpg?ex=65c6c1f2&is=65b44cf2&hm=a6d3802dd947b8d9e3cb27f7e4869baa19241d24004ed7808f4476a1ee0cb2ad&">
 	</section>       
     </main>
 
