--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <p> This will be my conflict! </p>
     <title>About Us - Website Development Company</title>
     <link rel="stylesheet" href="style.css">
 </head>
